Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-25387

Simple CMake projects not parsed correctly

XMLWordPrintable

    • Linux/X11
    • f7d729f0b519aa17ec201ae76543185b92537d4b (qt-creator/qt-creator/4.15)

      Qt Creator 4.15 seems to have problems with parsing simple CMake projects. I'm getting the following symptoms with build 480 (and some earlier builds too) of Qt Creator 4.15.0 beta1 on Ubuntu 20.04 (with CMake 3.16.3):

      1. Create a new project using the Plain C++ Application template. Select CMake as the build system.

      BUG 1: The Projects view shows a <File System> branch with greyed-out CMakeLists.txt and main.cpp files. Is this expected? These files are visible also elsewhere in the tree.

      2. Close the project. Open a terminal and navigate to the project directory. Delete the CMakeLists.txt.user file created by Qt Creator. Create a build subdirectory, navigate to it and run cmake .. to configure the build directory.

      3. In Qt Creator, open the CMakeLists.txt file located in the project directory. A Configure Project page will be shown in the main window. Qt Creator should automatically detect the build directory; ensure the checkbox next to its path is selected, as in the screenshot below, and click Configure Project.

      BUG 2: The Projects view shows a <File System> item, but no CMake targets:

      The Projects page displays a warning message The project was not parsed successfully:

      The problems described above do not occur in Qt Creator 4.14.0 run in the same system.

        1. qtc-4.15-configure-project.png
          63 kB
          Wojciech Smigaj
        2. qtc-4.15-file-system-open-existing-project.png
          31 kB
          Wojciech Smigaj
        3. qtc-4.15-file-system-wizard.png
          48 kB
          Wojciech Smigaj
        4. qtc-4.15-projects-page-warning.png
          42 kB
          Wojciech Smigaj
        For Gerrit Dashboard: QTCREATORBUG-25387
        # Subject Branch Project Status CR V

            cadam Cristian Adam
            puddleglum Wojciech Smigaj
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes