CMakePM: Treat empty build as empty when importing CMake builds

Qt Creator 4.15 with the CMake multi-config support it parses the
correct CMAKE_BUILD_TYPE file-api json export.

With the empty build Qt Creator was giving it a name: Build, which
was not part of the file-api json export.

Fixes: QTCREATORBUG-25387
Change-Id: Id0b5f1077f6473fa5aef09397a8257b253557597
Reviewed-by: Eike Ziller <eike.ziller@qt.io>